rifattorizzazione del codice e creata classe astratta Item per Prodotto e pacchetto